<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/connect_peer"
          android:title="@string/connect_peer_menu_item"/>
    <item android:id="@+id/new_game"
          android:visible="false"
          android:title="@string/new_game_menu_item"/>
    <item android:id="@+id/pause_game"
          android:visible="false"
          android:title="@string/pause_game_menu_item"/>
    <item android:id="@+id/resume_game"
          android:visible="false"
          android:title="@string/resume_game_menu_item"/>
    <item android:id="@+id/abort_game"
          android:visible="false"
          android:title="@string/abort_game_menu_item"/>
    <item android:id="@+id/quit_game_app"
          android:title="@string/quit_game_app_menu_item"/>
</menu>